@@ -1,3 +1,4 @@
+	* fix exporting files from partfile while seeding
 	* fix potential deadlock on Windows, caused by performing restricted
 	  tasks from within DllMain
 	* fix issue when subsequent file priority updates cause torrent to stop
